fix: gap variants

--- a/css/variants.css
+++ b/css/variants.css
@@ -27,7 +27,7 @@
     block-size: 0.5rem;
     box-sizing: border-box;
     display: flex;
-    gap: 1rem;
+    gap: 1.5rem;
 
 }
 
